Coup de Karcher n7

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -277,18 +277,18 @@ Dans beaucoup de cas, ces roches présentent une pente plus faible vers l'amont 
 
 \subsubsection{L'érosion marine}
 
-Les principaux agents de l'érosion marine sont les vagues et les courants, auxquels on peut ajouter l'action du sel emportés par le vent (processus d'haloclastie due à la cristallisation de sel dans la porosité et les fractures.
+Les principaux agents de l'érosion marine sont les vagues et les courants, auxquels on peut ajouter l'action du sel emporté par le vent (processus d'haloclastie due à la cristallisation de sel dans la porosité et les fractures).
 Les vagues ont un pouvoir érosif dû à plusieurs facteurs~:
 \begin{itemize}
   \item un mitraillage de la surface par les débris (gravier et sable) transportés ;
   \item une force de succions lorsqu'elles se retirent ;
   \item des vibrations pas suite de chocs successifs.
 \end{itemize}
-Les altérites sont ensuite séparés selon leur poids~: les plus fins restent en suspension alors que les plus gros se déposent au fond.
+Les altérites sont ensuite séparées selon leur poids~: les plus fines restent en suspension alors que les plus grosses se déposent au fond.
 Les grains de sable qui subissent l'action des vagues ont un aspect émoussé-luisant, contrairement à ceux transportés par le vent qui ont un aspect rond-mat. \\
 
-L'érosion des façades littorales par la mer se produit par sapement et éboulement (l'eau creuse le bas de la falaise, ce qui provoque l'effondrement du mur).
-Nous distinguons les falaises vives (encore érodées par les vagues) des falaises mortes (séparées par un banc de sable de la mer).
+L'érosion des façades littorales par la mer se produit par sapements et éboulements (l'eau creuse le bas de la falaise, ce qui provoque l'effondrement du mur).
+Nous distinguons les falaises vives, encore érodées par les vagues, des falaises mortes, séparées par un banc de sable de la mer.
 
 \begin{center}
   \includegraphics[width=8cm]{Images/Erosion/cliffs.jpg}
@@ -305,21 +305,22 @@ Il existe trois types de transport~:
 
 \subsubsection{Le glissement de masse}
 
-Ils se produisent lorsque la pente est raide.
+Les glissements de masse se produisent lorsque la pente est raide.
 Le déplacement est court (de l'ordre du kilomètre) mais la quantité de matière transportée peut être très importante.
 Le déplacement provient d'une fissure avec la masse rocheuse qui délie la surface rocheuse.
 Les fluides n'ont aucun impact sur ce type de transport (sauf si nous considérons qu'ils sont la cause de la fissure).
 
 \subsubsection{Les écoulements gravitaires}
 
-Ils proviennent de la mise en solution d'altérites~; toutefois, nous les distinguons des écoulements de fluides simples car c'est la gravité qui provoque leur déplacement. Les pentes soumises à ce type de transport sont faibles.
+Les écoulement gravitaires proviennent de la mise en solution d'altérites.
+Toutefois, nous les distinguons des écoulements de fluides simples car c'est la gravité qui provoque leur déplacement. Les pentes soumises à ce type de transport sont faibles.
 
 \subsubsection{L'écoulement d'un fluide}
 
-C'est le fluide qui est responsable du déplacement.
+L'écoulement d'un fluide est le fluide qui est responsable du déplacement.
 Sa capacité à transporter des altérites dépend de nombreux facteurs, dont sa masse volumique, sa vitesse et sa viscosité.
 Les différences entre l'air, l'eau liquide et les glaciers provient de cette différence de masse et de viscosité.
-La vitesse du fluide permet de distinguer deux types d'écoulement~: laminaire et turbulent.
+La vitesse du fluide permet de distinguer deux types d'écoulements~: laminaire et turbulent.
 Un écoulement laminaire peut être qualifié de « tranquille »~: les filets d'eau restent parallèles entre eux.
 Un écoulement turbulent, pour sa part, voit ses filets d'eau partir dans tous les sens~: le transport est conditionné par les altérites qu'il transporte.
 C'est le « nombre de Reynolds » (Re) qui permet de distinguer si un écoulement est laminaire ou turbulent~:
@@ -351,7 +352,7 @@ Si F est inférieur à 1, l’écoulement est turbulent. \\
 
 Nous distinguons trois types de transport de sédiments, qui dépendent de la masse des sédiments~:
 \begin{itemize}
-  \item le roulement, pour les altérites les plus gros ;
+  \item le roulement, pour les altérites les plus grosses ;
   \item la saltation (ou le transport par rebond) pour les éléments de masse moyenne ;
   \item la suspension pour les éléments les plus légers.
 \end{itemize}
@@ -379,7 +380,7 @@ Dès qu'une particule est mise en suspension, elle commence aussitôt à sédime
 \end{center}
 Où c est une constante égale à~:
 \begin{center}
-  \boxed{\displaystyle{(rp -rf) \times \frac{g}{18\mu}}}
+  \boxed{c = \displaystyle{(rp -rf) \times \frac{g}{18\mu}}}
 \end{center}
 
 Où $v$ représente la vitesse de sédimentation, $\mu$ la viscosité du fluide, $rf$ sa masse volumique et $rp$ celle de la particule; $d$ est le diamètre de la particule.
@@ -396,7 +397,7 @@ Cette mécanique de refroidissement met en place d'autres mécanismes comme ceux
 \subsection{La subduction}
 
 La subduction désigne la plongée d'une plaque sous une autre (voir figure ci-dessous). Ces plaques sont dites lithosphériques (car possédant une lithosphère, pour simplifier, une partie solide séparée de l'asthénosphère par le moho). Elles sont portées par l'asthénosphère, la partie « manteau » des plaques.
-Une subduction survient généralement quand une plaque océanique vieillissante plonge sous un continent. En fonction de l'angle d'incidence et de la vitesse de la plaque plongeante, différent types de phénomène orogéniques sont visibles à la surface. Par exemple, des séismes fréquents qui créent une chaîne de montagne.
+Une subduction survient généralement quand une plaque océanique vieillissante plonge sous un continent. En fonction de l'angle d'incidence et de la vitesse de la plaque plongeante, différent types de phénomènes orogéniques sont visibles à la surface. Par exemple, des séismes fréquents qui créent une chaîne de montagne.
 De nos jours, ce phénomène se manifeste encore à grande ampleur dans les Andes, et des traces de subductions se trouvent aux quatre coins du globe, de l'Inde au Japon en passant par les Alpes. \\
 
 \begin{center}
@@ -430,7 +431,7 @@ Plus récemment, dans les dernières centaine de milliers d'années, les nombreu
 
 \subsection{Dynamique des roches}
 	
-Les physiciens ont grandement fait avancer la géologie modernes grâce aux roches car la connaissance de la dynamique des roches face à un contexte donné éclaire sur la formation et l'évolution des grands systèmes orogéniques comme des déformations à petite échelle.
+Les physiciens ont grandement fait avancer la géologie modernes grâce aux roches, car la connaissance de la dynamique des roches face à un contexte donné éclaire sur la formation et l'évolution des grands systèmes orogéniques comme des déformations à petite échelle.
 En effet, les roches, bien qu'usuellement cassantes et rigides, peuvent devenir plus ductiles sous certaines conditions. \\
 
 \subsubsection{Le temps}
@@ -439,20 +440,20 @@ Le temps est l'élément fondamental de la géologie car même les roches les pl
 En effet, sur les échelles immenses qui sont celles des temps géologiques, n'importe quel matériau se comportera comme s'il était mou.\\
 Par exemple, une montagne, sous certaines conditions, peut se transformer en colline en seulement quelques millions d'années.
 Autre exemple, la « mort des océans », dûe à la lithosphère océanique qui, étant plus dense que la croûte continentale, se refroidit et s'alourdit lentement au fil des millénaires.
-Il est avéré qu'à cause de ce principe, la durée de vie des océans est limitée à environ 270 millions d'années.
+Il c'est avéré qu'à cause de ce principe, la durée de vie des océans est limitée à environ 270 millions d'années.
 Les océans suivent donc un cycle de naissance, vie et de mort qui est directement à la source de la plupart des mécanismes orogéniques.
 
 \subsubsection{La température}
 
-Plus il fait chaud, plus une roche est fluide.
+Plus la température est élevée, plus une roche est fluide.
 C'est le cas pour toutes les roches ; ainsi, l'aspect « pâte à modeler » des roches est accentué en profondeur par la chaleur qui les rend plus malléables.
 Cela se ressent sur les séismes~: il existe une limite assez floue mais bien réelle qui sépare les séismes cassants, qui se déplacent brusquement à intervalle régulier, des séismes coulissant, où les roches supportent leur déformation progressive en coulissant entre elles comme des fluides très visqueux.
 
 \subsubsection{La pression}
 
-Un facteur auquel nous pensons rarement en premier mais qui est en réalité tout aussi important que les autres.
+La pression est facteur auquel nous pensons rarement en premier mais qui est en réalité tout aussi important que les autres.
 En effet, la pression des grandes profondeurs empêche les roches de devenir liquides trop rapidement au fur et à mesure qu'elles s'enfoncent.
-A l'inverse, une brusque remontée de roche des profondeurs, comme c'est le cas avec les volcans par exemple, les font fondre et augmentent plus encore la pression qu'ils exerçant sur le « toit ».
+A l'inverse, une brusque remontée de roche depuis les profondeurs, comme c'est le cas avec les volcans, les font fondre et augmentent plus encore la pression qu'elles exerçaient sur le « toit ».
 C'est ce qui explique que le magma des volcans remonte jusqu'à une certaine hauteur, s'infiltrant par les failles, puis que c'est alors au tour du gaz de fournir la pression nécessaire à l'expulsion du magma.
 
 \section{La simulation}
@@ -460,7 +461,7 @@ C'est ce qui explique que le magma des volcans remonte jusqu'à une certaine hau
 \subsection{Modéliser un paysage géologique}
 
 Il y a beaucoup de moyens de simuler certains comportements dynamiques en géologie.
-La plupart font appel à une expérience physique mais quelques unes, plus ou moins récentes, font exclusivement usage du numérique.
+La plupart font appel à une expérience physique mais quelques uns, plus ou moins récentes, font exclusivement usage du numérique.
 Pour rester cohérents avec notre problématique et notre objectif, nous avons choisi cette seconde voie.
 
 \subsubsection{Les simulations physiques}
@@ -471,7 +472,6 @@ Il est fréquent chez les chercheurs géologues de remplacer les couches par div
 Ces différentes couches sont soigneusement empilées et leurs propriétés sont choisies avec soin de sorte à faire l'analogie avec les couches géologiques d'un paysage réel.
 Ces simulations, bien que limitées, arrivent à représenter des contraintes de déformation très précises, pour avoir un aperçu visuel d'une démonstration en géologie (ex~: tectonique des plaques, démonstration par l'expérience de l'existence de certains types de plissements) ou pour démontrer l'existence de certains comportements et propriétés dans un système géologiques.
 La plupart de ces simulations sont utilisées, encore aujourd'hui (par souci de rapidité et de réalisme), et modélisent des phénomènes très précis en utilisant des propriétés physiques.
-Ils simulent souvent les phénomènes de compression et donc de plissement par différentes couches successives de pâte à modeler de consistance et de propriété différentes pour simuler les phénomènes observés dans la nature.\\
 La collision de la plaque indienne avec la plaque euro-asiatique a ainsi reçu une illustration réaliste grâce à un pressoir en métal (représentant l'inde) s'enfonçant dans de la pâte à modeler (représentant l'Asie).
 D'autres simulations du même genre mettent en valeur certains types de plis, plis couchés, plis droits et autre. Cependant, ces différentes simulations, bien que très parlantes, prouvent rarement des conjectures car elles sont difficilement reproductibles et nécessitent surtout beaucoup de suppositions qui détachent leur mises en œuvre de la réalité.
 
@@ -498,11 +498,11 @@ Cette simulation était assez convaincante visuellement, mais fondamentalement t
 \begin{center}
   \includegraphics[width=8cm]{Images/3100_cell.png}
 \end{center}
-\captionof{figure}{Images d'une simulation par automates cellulaire bidimensionnelle à 3100 itérations.}
+\captionof{figure}{Images d'une simulation par automates cellulaires bidimensionnelle à 3100 itérations.}
 \begin{center}
   \includegraphics[width=8cm]{Images/7100_cell.png}
 \end{center}
-\captionof{figure}{Images d'une simulation par automates cellulaire bidimensionnelle à 7100 itérations.}
+\captionof{figure}{Images d'une simulation par automates cellulaires bidimensionnelle à 7100 itérations.}
 
 \paragraph{Simulation par voxels}
 \medbreak
@@ -514,7 +514,7 @@ En effet, il devient bien plus rapide d'effectuer des opérations simples comme 
 De plus, ce système offre l'avantage de permettre de changer assez facilement la résolution des boxels.
 En effet, on peut les simplifier à l'affichage en les rendant plus gros, ce qui allège la tâche de la carte graphique.
 De plus, de la même façon que dans les images en deux dimensions la plus petite unité considérée est le pixel, le boxel est son équivalent en 3D, ce qui implique que les algorithmes de compression classiques des images 2D (type png, jpeg, gif) peuvent s'appliquer sur des portions ou la totalité d'un terrain ainsi généré (moyennant des modifications mineurs), ce qui permet une économie de mémoire énorme.
-C'est pour toutes ces raisons qu'un modèle d'érosion intelligent basé sur un automate cellulaire 3D permettrait de simuler avec une grande précision un paysage de type alpin, tout en économisant beaucoup de mémoire (moyennant quelques optimisations).
+C'est pour toutes ces raisons qu'un modèle d'érosion intelligent basé sur un automate cellulaire 3D permettrait de simuler avec une grande précision un paysage de type alpin, tout en économisant beaucoup de mémoire.
 
 \subsection{Les Cellules}
 \subsubsection{Définition d'une cellule}
